--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-parcelize'
 }
-
+apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 30
 
     defaultConfig {
         applicationId "com.example.androiddevchallenge"
-        minSdkVersion 23
+        minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -64,16 +65,29 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation "androidx.paging:paging-runtime-ktx:3.0.0-beta02"
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
+    implementation "androidx.compose.runtime:runtime:1.0.0-beta02"
+    implementation "androidx.compose.runtime:runtime-livedata:1.0.0-beta02"
+    implementation "androidx.compose.runtime:runtime-rxjava2:1.0.0-beta02"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+    implementation 'com.beust:klaxon:5.0.1'
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.1"
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha09"
     implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.3.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
-    implementation "androidx.activity:activity-compose:1.3.0-alpha04"
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
-
+    implementation 'androidx.activity:activity-compose:1.3.0-alpha04'
+    androidTestImplementation 'androidx.test:core:1.3.0'
     testImplementation 'junit:junit:4.13.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
